# ocvqc-py

./: pyproject.toml
.github/: dependabot.yml
.github/workflows/: issue-to-project.yaml  pr-title.yml  run_tests.yaml
