[tool.poetry]
name = "ocvqc-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.11"
notebook = ">=7.4,<7.6"
pytket-quantinuum = ">=0.53,<0.57"
pytket_pecos = ">=0.2,<0.4"
pytest = ">=8.4,<9.1"
pytest-cov = ">=6.2,<7.1"
ruff = ">=0.12,<0.15"
mypy = ">=1.17,<1.20"
importlib-resources = ">=6.5,<6.6"
pytest-parallel = ">=0.1,<0.2"
py = ">=1.11,<1.12"
docstr-coverage = ">=2.3,<2.4"
sphinx = ">=8.2,<9.1"
sphinx-autodoc-typehints = ">=3.2,<3.7"
nbmake = ">=1.5,<1.6"
pytket = ">=2.9,<2.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["I001"]
